log/build_2022-06-02_16-39-34/jetbot/stderr.log
  File "/home/sycamore/Syca_ws/install/lib/python3.8/site-packages/jetbot/jb_start.py", line 54
    'State of robot is : (x=%f, y=%f, theta=%f)\n %
                                                  ^
SyntaxError: EOL while scanning string literal

